Fixed Dark mode fonts & other issues

--- a/ceylon-dark.css
+++ b/ceylon-dark.css
@@ -14,6 +14,7 @@
 
   --theme-link: #4592e4;
   --theme-font-general: #ABB2BF;
+  --select-text-bg-color: #4f565f;
 
   /* Slate grayscale */
   --theme-50: #0f172a; 
@@ -1064,10 +1065,11 @@ g[data-mml-node="merror"]>g {
 
 :root {
   --cf-bg-color: #23272E;
+  --cf-font-color: var(--theme-font-general);
 }
 
 .md-fences {
-  color: var(--tw-prose-pre-code);
+  color: var(--cf-font-color);
   background-color: var(--cf-bg-color);
   font-weight: 400;
   font-size: var(--code-blocks-font-size);
@@ -1092,11 +1094,12 @@ g[data-mml-node="merror"]>g {
   border-radius: 0.5rem;
   padding-left: 0 !important;
   padding-right: 0 !important;
-  background-color: var(--theme-600);
+  background-color: var(--theme-200);
+  color: var(--theme-font-general);
 }
 
 .md-fences:hover>.code-tooltip {
-  background-color: var(--theme-700);
+  background-color: var(--theme-300);
 }
 
 .code-tooltip .ty-input {
@@ -1126,45 +1129,12 @@ pre code::after {
 /* SYNTAX HIGHLIGHTING */
 
 :root {
-  /* --code-neutral:  rgb(126, 132, 142);
-  --code-cursor: var(--theme-900);
-  --code-string: rgb(152, 195, 121);
-  --code-number: rgb(209, 154, 102);
-  --code-tag: rgb(198, 120, 221);
-  --code-variable: rgb(97, 175, 239);
-  --code-operator: var(--theme-600);
-  --code-comment: rgb(126, 132, 142);
-  --code-bracket: rgb(171, 178, 191);
-  --code-citation: var(--theme-500);
-
-  --code-neutral-inverted: var(--theme-100);
-  --code-cursor-inverted: var(--theme-50);
-  --code-string-inverted: #7dd4fc;
-  --code-number-inverted: #fde68a;
-  --code-tag-inverted: #f472b5;
-  --code-variable-inverted: var(--theme-200);
-  --code-operator-inverted: var(--theme-400);
-  --code-comment-inverted: var(--theme-400);
-  --code-bracket-inverted: var(--theme-500);
-  --code-citation-inverted: var(--theme-400); */
-
   --code-gutter: #495162;
 }
 
 #write .cm-s-inner {
-  /* --code-neutral: var(--code-neutral);
-  --code-cursor: var(--code-cursor-inverted);
-  --code-string: var(--code-string);
-  --code-number: var(--code-number);
-  --code-tag: var(--code-tag);
-  --code-variable: var(--code-variable);
-  --code-operator: var(--code-operator-inverted);
-  --code-comment: var(--code-comment);
-  --code-bracket: var(--code-bracket);
-  --code-citation: var(--code-citation); */
-
   --code-neutral: rgb(126, 132, 142);
-  --code-cursor: var(--theme-50);
+  --code-cursor: var(--theme-800);
   --code-string: #98C379;
   --code-number: rgb(209, 154, 102);
   --code-tag: #E06C75;
